# med-de-id

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mdid-adapters/: Cargo.toml
crates/mdid-adapters/src/: conservative_media.rs  dicom.rs  image_redaction.rs  lib.rs  pdf.rs  tabular.rs
crates/mdid-adapters/tests/: conservative_media_adapter.rs  csv_tabular_adapter.rs  dicom_adapter.rs  image_redaction_adapter.rs  pdf_adapter.rs  xlsx_tabular_adapter.rs
crates/mdid-application/: Cargo.toml
crates/mdid-application/src/: lib.rs
crates/mdid-application/tests/: application_services.rs  conservative_media_deidentification.rs  dicom_deidentification.rs  moat_control_plane.rs  moat_rounds.rs  pdf_deidentification.rs  tabular_deidentification.rs  visual_redaction.rs
crates/mdid-browser/: Cargo.toml
crates/mdid-browser/src/: app.rs
crates/mdid-cli/: Cargo.toml
crates/mdid-cli/src/: main.rs
crates/mdid-cli/tests/: cli_pdf.rs  cli_smoke.rs  moat_cli.rs
crates/mdid-desktop/: Cargo.toml
crates/mdid-desktop/src/: lib.rs  main.rs
crates/mdid-domain/: Cargo.toml
crates/mdid-domain/src/: lib.rs
crates/mdid-domain/tests/: conservative_media_workflow_models.rs  dicom_workflow_models.rs  moat_agent_memory.rs  moat_workflow_models.rs  pdf_workflow_models.rs  tabular_workflow_models.rs  vault_workflow_models.rs  visual_redaction_models.rs  workflow_models.rs
crates/mdid-runtime/: Cargo.toml
crates/mdid-runtime/src/: http.rs  lib.rs  moat.rs  moat_history.rs
crates/mdid-runtime/tests/: moat_history.rs  moat_runtime.rs  runtime_http.rs
crates/mdid-vault/: Cargo.toml
crates/mdid-vault/src/: lib.rs
crates/mdid-vault/tests/: local_vault_store.rs
docs/research/: privacy-filter-cli-spike-results.md  privacy-filter-eval.md  small-ocr-eval.md  small-ocr-spike-results.md
docs/superpowers/plans/: 2026-04-25-med-de-id-foundation-implementation-plan.md  2026-04-25-med-de-id-moat-agent-memory-task-graph.md  2026-04-25-med-de-id-moat-cli-bounded-runner.md  2026-04-25-med-de-id-moat-compile-green-fix.md  2026-04-25-med-de-id-moat-continuation-gate.md  2026-04-25-med-de-id-moat-control-plane-snapshot.md  2026-04-25-med-de-id-moat-loop-foundation.md  2026-04-25-med-de-id-moat-loop-runtime-completion.md  2026-04-25-med-de-id-moat-round-history.md  2026-04-25-med-de-id-moat-strategy-spec-handoff.md  2026-04-25-med-de-id-slice-2-vault-encode-decode-mvp.md  2026-04-25-med-de-id-slice-3-tabular-deep-support.md  2026-04-25-med-de-id-slice-4-dicom-tag-level-support.md  2026-04-26-med-de-id-moat-agent-assignment-projection.md  2026-04-26-med-de-id-moat-assignment-inspection.md  2026-04-26-med-de-id-moat-assignment-node-filter.md  2026-04-26-med-de-id-moat-assignments-contains-filter.md  2026-04-26-med-de-id-moat-assignments-kind-filter.md  2026-04-26-med-de-id-moat-assignments-limit.md  2026-04-26-med-de-id-moat-assignments-spec-filter.md  2026-04-26-med-de-id-moat-assignments-state-filter.md  2026-04-26-med-de-id-moat-assignments-title-filter.md  2026-04-26-med-de-id-moat-decision-log-escaped-output.md  2026-04-26-med-de-id-moat-decision-log-inspection.md  2026-04-26-med-de-id-moat-decision-log-limit.md  2026-04-26-med-de-id-moat-decision-log-rationale-filter.md  2026-04-26-med-de-id-moat-decision-log-role-filter.md  2026-04-26-med-de-id-moat-decision-log-summary-filter.md  2026-04-26-med-de-id-moat-decision-log-text-filter.md  2026-04-26-med-de-id-moat-history-decision-filter.md  2026-04-26-med-de-id-moat-history-pivot-decision-filter.md  2026-04-26-med-de-id-moat-history-recent-rounds.md  2026-04-26-med-de-id-moat-history-score-filter.md  2026-04-26-med-de-id-moat-history-stop-reason-filter.md  2026-04-26-med-de-id-moat-history-text-filter.md  2026-04-26-med-de-id-moat-persisted-control-plane.md  2026-04-26-med-de-id-moat-plan-export.md  2026-04-26-med-de-id-moat-schedule-next.md  2026-04-26-med-de-id-moat-spec-doc-export.md  2026-04-26-med-de-id-moat-task-graph-contains-filter.md  (+223 more)
docs/superpowers/specs/: 2026-04-25-med-de-id-design.md  2026-04-25-med-de-id-moat-loop-design.md  2026-04-30-privacy-filter-and-small-ocr-evaluation.md
scripts/ocr_eval/: README.md  build_ocr_handoff.py  run_ocr_batch_quality.py  run_ocr_handoff_corpus.py  run_ocr_privacy_evidence.py  run_ocr_to_privacy_filter_corpus.py  run_small_ocr.py  validate_ocr_handoff.py  validate_small_ocr_output.py
scripts/ocr_eval/fixtures/: ocr_handoff_expected_shape.json  synthetic_printed_phi.txt  synthetic_printed_phi_expected.txt
scripts/ocr_eval/fixtures/corpus/: synthetic_patient_label_01.txt  synthetic_patient_label_02.txt
scripts/privacy_filter/: README.md  run_privacy_filter.py  run_synthetic_corpus.py  test_run_privacy_filter.py  validate_privacy_filter_output.py
scripts/privacy_filter/fixtures/: sample_text_expected_shape.json  sample_text_input.txt
scripts/privacy_filter/fixtures/corpus/: clinic_note.txt  contact_card.txt
tests/: test_ocr_handoff_builder_failures.py  test_ocr_handoff_contract.py  test_ocr_handoff_corpus.py  test_ocr_privacy_evidence_runner.py  test_ocr_runner_contract.py  test_ocr_to_privacy_filter_corpus.py
