[workspace]
members = [
  "crates/mdid-domain",
  "crates/mdid-vault",
  "crates/mdid-adapters",
  "crates/mdid-application",
  "crates/mdid-runtime",
  "crates/mdid-cli",
  "crates/mdid-browser",
  "crates/mdid-desktop",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
calamine = "0.34"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
eframe = "0.27"
egui = "0.27"
http = "1"
leptos = { version = "0.6", features = ["csr"] }
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["serde", "v4"] }
