[package]
name = "mdid-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
calamine.workspace = true
csv.workspace = true
dicom-core = "0.9.1"
dicom-object = "0.9.1"
mdid-domain = { path = "../mdid-domain" }
thiserror.workspace = true

[dev-dependencies]
rust_xlsxwriter = "0.94"
