[package]
name = "mdid-browser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gloo-net = "0.6"
js-sys = "0.3"
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag", "Document", "Element", "File", "FileList", "FileReader", "HtmlAnchorElement", "HtmlInputElement", "Url", "Window"] }
