[package]
name = "mdid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mdid-application = { path = "../mdid-application" }
mdid-domain = { path = "../mdid-domain" }
mdid-runtime = { path = "../mdid-runtime" }
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json.workspace = true

[[bin]]
name = "mdid-cli"
path = "src/main.rs"
