[package]
name = "mdid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
mdid-adapters = { path = "../mdid-adapters" }
mdid-application = { path = "../mdid-application" }
mdid-domain = { path = "../mdid-domain" }
mdid-runtime = { path = "../mdid-runtime" }
mdid-vault = { path = "../mdid-vault" }
serde.workspace = true
serde_json.workspace = true
rust_xlsxwriter = "0.94"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json.workspace = true
rust_xlsxwriter = "0.94"
tempfile.workspace = true

[[bin]]
name = "mdid-cli"
path = "src/main.rs"
