[package]
name = "mdid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mdid-adapters = { path = "../mdid-adapters" }
mdid-application = { path = "../mdid-application" }
mdid-domain = { path = "../mdid-domain" }
mdid-vault = { path = "../mdid-vault" }
serde.workspace = true
serde_json.workspace = true
rust_xlsxwriter = "0.94"

[dev-dependencies]
assert_cmd = "2.0"
dicom-core = "0.9.1"
dicom-object = "0.9.1"
predicates = "3.1"
serde_json.workspace = true
tempfile.workspace = true

[[bin]]
name = "mdid-cli"
path = "src/main.rs"
