[package]
name = "mdid-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
mdid-application = { path = "../mdid-application" }
mdid-domain = { path = "../mdid-domain" }
mdid-vault = { path = "../mdid-vault" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
dicom-core = "0.9.0"
dicom-object = "0.9.1"
mdid-adapters = { path = "../mdid-adapters" }
tokio.workspace = true
tower.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
